--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,21 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.meill.dijoncenter.MainActivity">
     <ListView
+        android:id="@+id/listLieu"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/btnCreate" />
+
+    <Button
+        android:id="@+id/btnCreate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listLieu"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:text="Crée un Nouveaux Parcours"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:background="#ffffff"
-        android:visibility="visible" />
+        android:layout_alignParentStart="true" />
+
+
 </RelativeLayout>
