--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,7 @@
         android:text="@string/CreateParcours"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_toEndOf="@+id/txtnbPoid" />
 
     <TextView
         android:id="@+id/textView7"
@@ -45,6 +44,15 @@
         android:layout_toRightOf="@+id/textView7"
         android:text="@string/Null"
         android:textStyle="bold|italic" />
+
+    <Button
+        android:id="@+id/BtnlstRoute"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="List Route"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_toStartOf="@+id/btnCreate" />
 
 
 </RelativeLayout>
